# pento_challenge

./: .gitignore  README.md  app.py  config.py  dataset.py  evaluate.py  main.py  model.py  predict.py  pyproject.toml  train.py  visualize.py
